# surveylm_tools

./: README.md  combinations_with_ids.xlsx  events_data.xlsx  pyproject.toml  queensland-disaster-management-committee-annual-report-2023-2024_events_database.xlsx  queensland-disaster-management-committee-annual-report-2023-2024_events_database2.xlsx
code/: extract_disaster_events_DPC_openai_v1.py  extract_disaster_events_DPC_openai_v2.py  extract_disaster_events_DPC_openai_v3.py  extract_disaster_events_DPC_regex_v1.py  surveylm_agent_generator_v11.py  surveylm_question_table_generator_v10.py  surveylm_question_table_generator_v11.py  surveylm_question_table_splitter_v1.py  surveylm_resume_agent_generator_v1.py  surveylm_run_simulations_v32.py  surveylm_scenario_treatment_combinator_v2.py  surveylm_scenario_treatment_combinator_v3.py  surveylm_scenario_treatment_combinator_v5.py  surveylm_scenario_treatment_combinator_v6.py  surveylm_simulation_output_combinator_v1.py
code/superseded/: surveylm_question_table_generator_v10.py  surveylm_scenario_treatment_combinator_v1.py  surveylm_scenario_treatment_combinator_v2.py  surveylm_scenario_treatment_combinator_v3.py  surveylm_scenario_treatment_combinator_v4.py
data/inputs/agent_profile_specifications/: sample_profile_generation_input_v5.xlsx
data/inputs/panel_datasets/: synthetic_WVS_TimeSeries_1981_2022_Stata_v3_0_combined.csv
data/inputs/treatment_combinations/: combinations_with_ids_disability_econ_games.xlsx  teacher_agents.xlsx  (+4 more)
data/simulations/: .Rhistory
other_docs/: README_panalogylab_surveylm.md
(+2 files in other folders)
