[tool.poetry]
name = "agent-generator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "agent_generator"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
numpy = "^1.26.4"
openpyxl = "^3.1.2"
scipy = "^1.13.0"
requests = "^2.32.3"
requests-html = "^0.10.0"
selenium = "^4.22.0"
tqdm = "^4.66.4"
datetime = "^5.5"
configparser = "^7.0.0"
pydantic = "^2.9.1"
pymupdf = "^1.24.10"
openai = "^1.44.1"
pillow = "^10.4.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
